--- a/CalendarAPI/CalendarAPI.Web/Views/Calendar/Submit.cshtml
+++ b/CalendarAPI/CalendarAPI.Web/Views/Calendar/Submit.cshtml
@@ -1,2 +1,40 @@
-﻿<h2>Submit</h2>
+﻿@using CalendarAPI.Web.Models.Calendar
+@model CalendarSubmitModel
+
+<h2> Choose a file to submit</h2>
+
+
+    <div class="row">
+        <div class="col-md-8 well">
+            @using (Html.BeginForm("Submit", "Calendar", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
+            {
+                <fieldset>
+                    <legend>Seed Events</legend>
+
+                    @Html.AntiForgeryToken();
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
+                        </div>
+                        @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.UploadedFile, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            <input type="file" name="UploadedFile" id="UploadedFile" class="form-control col-md-2" />
+                            @Html.ValidationMessageFor(m => m.UploadedFile, string.Empty, new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                </fieldset>
+                <input type="submit" value="Submit" class="btn btn-primary pull-right" />
+            }
+        </div>
+    </div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
