--- a/CalendarAPI/CalendarAPI.Web/Views/Home/Index.cshtml
+++ b/CalendarAPI/CalendarAPI.Web/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
+﻿<div class="jumbotron">
     <h1>Calendar Sample</h1>
     <p class="lead">
         Simple application which allows creating birthday events in
