--- a/CalendarAPI/CalendarAPI.Web/Views/Calendar/Submit.cshtml
+++ b/CalendarAPI/CalendarAPI.Web/Views/Calendar/Submit.cshtml
@@ -17,14 +17,14 @@
                         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
+                            @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "text-danger" })
                         </div>
-                        @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(m => m.UploadedFile, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
-                            <input type="file" name="UploadedFile" id="UploadedFile" class="form-control col-md-2" />
+                            @Html.TextBoxFor(m => m.UploadedFile, new { type = "file", @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.UploadedFile, string.Empty, new { @class = "text-danger" })
                         </div>
                     </div>
